--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -15,6 +15,14 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - uses: actions/checkout@v3
-    - run: echo "Hello world From Udacity"
-    - run: ls -l
+    - uses: actions/checkout@v3 
+    - run: docker-compose -f docker-compose-build.yaml build --parallel
+    - run: docker tag udagram-frontend:local toyintheisaac/udagram-frontend:v1
+    - run: docker tag udagram-api-user toyintheisaac/udagram-api-user:v1
+    - run: docker tag udagram-api-feed toyintheisaac/udagram-api-feed:v1
+    - run: docker tag reverseproxy toyintheisaac/reverseproxy:v1
+    - run: echo "${{secrets.DOCKER_PASSWORD}}" | docker login -u "${{secrets.DOCKER_USERNAME}}" --password-stdin
+    - run: docker push toyintheisaac/udagram-frontend:v1
+    - run: docker push toyintheisaac/udagram-api-user:v1
+    - run: docker push toyintheisaac/udagram-api-feed:v1
+    - run: docker push toyintheisaac/reverseproxy:v1
