--- a/feed-deploy.yml
+++ b/feed-deploy.yml
@@ -24,3 +24,10 @@ spec:
                 name: udagram-env
             - secretRef:
                 name: udagramdb-env
+          volumeMounts:
+            - mountPath: "/root/.aws/"
+              name: udagram-aws
+      volumes:
+        - name: udagram-aws
+          configMap:
+            name: udagram-aws
