--- a/feed-deploy.yml
+++ b/feed-deploy.yml
@@ -16,9 +16,14 @@ spec:
     spec:
       containers:
         - name: backend-feed
-          image: toyintheisaac/udagram-api-feed:v1
+          image: toyintheisaac/udagram-api-feed:v2
           ports:
             - containerPort: 8080
+          resources:
+            limits:
+              cpu: 500m
+            requests:
+              cpu: 200m
           envFrom:
             - configMapRef:
                 name: udagram-env
