--- a/user-deploy.yml
+++ b/user-deploy.yml
@@ -16,9 +16,14 @@ spec:
     spec:
       containers:
         - name: backend-user
-          image: toyintheisaac/udagram-api-user:v1
+          image: toyintheisaac/udagram-api-user:v2
           ports:
             - containerPort: 8080
+          resources:
+            limits:
+              cpu: 500m
+            requests:
+              cpu: 200m
           envFrom:
             - configMapRef:
                 name: udagram-env
